--- a/Pay365/Pay365Wallet/Views/Topup/TopupBank.cshtml
+++ b/Pay365/Pay365Wallet/Views/Topup/TopupBank.cshtml
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <div class="card-button">
-                            <a href="javascript:;" onclick="payment.actionView('ts-parent', 'prev', 'listBankSelect');" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Payment.btn_back</a>
+                            <a href="javascript:;" tabindex="-1" onclick="payment.actionView('ts-parent', 'prev', 'listBankSelect');" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Payment.btn_back</a>
                             <a id="bt_topup_confirm" onclick="topup.ConfirmTopup();" href="javascript:;" class="btn btn-flat btn-primary uppercase waves-effect waves-primary">@Resources.Payment.btn_next<i class="material-icons">chevron_right</i></a>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                         <div class="card-button">
-                            <a href="javascript:;" onclick="topup.BackStep(2);" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Payment.btn_back</a>
+                            <a href="javascript:;" tabindex="-1" onclick="topup.BackStep(2);" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Payment.btn_back</a>
                             <a href="javascript:;" id="btConfirmStep3" onclick="topup.ConfirmTopupStep3();" class="btn btn-flat btn-primary uppercase waves-effect waves-primary">@Resources.Topup.btn_Deposit<i class="material-icons">chevron_right</i></a>
                         </div>
                     </div>
@@ -345,7 +345,7 @@ else
                             </div>
                         </div>
                         <div class="card-button">
-                            <a href="javascript:;" onclick="payment.actionView('ts-parent', 'prev', 'listBankSelect');" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Payment.btn_back</a>
+                            <a href="javascript:;" tabindex="-1" onclick="payment.actionView('ts-parent', 'prev', 'listBankSelect');" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Payment.btn_back</a>
                             <a id="bt_topup_confirm" onclick="topup.ConfirmTopup();" href="javascript:;" class="btn btn-flat btn-primary uppercase waves-effect waves-primary">@Resources.Payment.btn_next<i class="material-icons">chevron_right</i></a>
                         </div>
                     </div>
@@ -387,7 +387,7 @@ else
                         </div>
 
                         <div class="card-button">
-                            <a href="javascript:;" onclick="topup.BackStep(1);" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i>@Resources.Payment.btn_back</a>
+                            <a href="javascript:;" tabindex="-1" onclick="topup.BackStep(1);" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i>@Resources.Payment.btn_back</a>
                             <a href="javascript:;" id="btConfirmStep2" onclick="topup.ConfirmTopupStep2();" class="btn btn-flat btn-primary uppercase waves-effect waves-primary">@Resources.Payment.btn_next<i class="material-icons">chevron_right</i></a>
                         </div>
                     </div>
