--- a/Pay365/Pay365Wallet/Views/TransactionHistory/History.cshtml
+++ b/Pay365/Pay365Wallet/Views/TransactionHistory/History.cshtml
@@ -473,7 +473,7 @@
                                 <div class="collapsible-header">
                                     <div class="trans-head">
                                         <div class="icon">
-                                            <img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/icons/chuyen-tien.svg" alt="">
+                                            <img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/icons/chuyen-tien.svg">
                                         </div>
                                         <div class="info">
                                             {{if $value.Amount > 0}}
