--- a/Pay365/Pay365Wallet/Views/Cashout/Cashout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Cashout/Cashout.cshtml
@@ -252,7 +252,7 @@
         </div>
 
         <div class="card-button">
-            <a href="javascript:;" onclick="cashout.BackStep(0);" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Cashout.String29</a>
+            <a href="javascript:;" tabindex="-1" onclick="cashout.BackStep(0);" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Cashout.String29</a>
             <a id="btConfirmStep1" onclick="cashout.ConfirmCashout(this);" href="javascript:;" class="btn btn-flat btn-primary uppercase waves-effect waves-primary">@Resources.Cashout.String18<i class="material-icons">chevron_right</i></a>
         </div>
     </div>
@@ -303,7 +303,7 @@
         </div>
 
         <div class="card-button">
-            <a href="javascript:;" onclick="cashout.BackStep(1);" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Cashout.String29</a>
+            <a href="javascript:;" tabindex="-1" onclick="cashout.BackStep(1);" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Cashout.String29</a>
             <a href="javascript:;" id="btConfirmStep2" onclick="cashout.ConfirmCashoutStep2(this);" class="btn btn-flat btn-primary uppercase waves-effect waves-primary">@Resources.Cashout.String18<i class="material-icons">chevron_right</i></a>
         </div>
     </div>
