--- a/Pay365/Pay365Wallet/Views/Home/Guide.cshtml
+++ b/Pay365/Pay365Wallet/Views/Home/Guide.cshtml
@@ -20,10 +20,11 @@
         </div>
     </section>
     <script type="text/javascript">
-         var ua = navigator.userAgent;
-         if (((ua.indexOf('Mozilla/5.0') > -1 && ua.indexOf('AppleWebKit') > -1) && ((ua.indexOf('iPhone') > -1 && ua.indexOf('Version') === -1) || (ua.indexOf('Android') > -1 && ua.indexOf('Version') > -1)))) {
-             $('header.header, section.main-top').hide();
-         }
+        var ua = navigator.userAgent;
+        if (((ua.indexOf('Mozilla/5.0') > -1 && ua.indexOf('AppleWebKit') > -1) && (((ua.indexOf('iPhone') > -1 || ua.indexOf('iPad') > -1) && ua.indexOf('Version') === -1) || (ua.indexOf('Android') > -1 && ua.indexOf('Version') > -1)))) {
+            $('header.header, section.main-top, aside.sidebar').hide();
+            $('aside.content-wrapper').css('margin-left', '0');
+        }
     </script>
     <div class="dashboard">
         <section class="page-section">
