--- a/Pay365/Pay365Wallet/Views/TransactionHistory/History.cshtml
+++ b/Pay365/Pay365Wallet/Views/TransactionHistory/History.cshtml
@@ -78,6 +78,7 @@
                                         </div>
                                         <div class="content">
                                             <p>${$value.ServiceName}</p>
+                                            <p>@Resources.Common.lbl_bank: ${$value.Description}</p>
                                         </div>
                                         <i class="material-icons up">keyboard_arrow_up</i>
                                     </div>
@@ -103,7 +104,7 @@
                                                         {{if $value.Description != null && $value.Description != ""}}
                                                         <tr>
                                                             <td>@Resources.Common.lbl_Description:</td>
-                                                            <td>${$value.Description}</td>
+                                                            <td>@Resources.Common.Menu_Topup1 ${$value.Description}</td>
                                                         </tr>
                                                         {{/if}}
                                                     </tbody>
@@ -416,6 +417,7 @@
                                         </div>
                                         <div class="content">
                                             <p>${$value.ServiceName}</p>
+                                            <p>@Resources.Common.lbl_bank: ${$value.Description}</p>
                                         </div>
                                         <i class="material-icons up">keyboard_arrow_up</i>
                                     </div>
@@ -441,7 +443,7 @@
                                                         {{if $value.Description != null && $value.Description != ""}}
                                                         <tr>
                                                             <td>@Resources.Common.lbl_Description:</td>
-                                                            <td>${$value.Description}</td>
+                                                            <td>@Resources.Common.Menu_Topup1 ${$value.Description}</td>
                                                         </tr>
                                                         {{/if}}
                                                     </tbody>
