--- a/Pay365/Pay365Wallet/Views/Topup/TopupBank.cshtml
+++ b/Pay365/Pay365Wallet/Views/Topup/TopupBank.cshtml
@@ -45,11 +45,11 @@
                                     </div>
                                     <script id="topup_bank_tmpl_OnlySTB" type="text/x-jquery-tmpl">
                                         {{each listBank}}
-                                        {{if BankCode == STB}}
-                                        <div class="box-bank-icon">
-                                            <a href="javascript:;" onclick="topup.TopupBankDetail(this);" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankCode}.png" alt=""></a>
-                                        </div>
-                                        {{/if}}
+                                            {{if BankCode == "STB"}}
+                                            <div class="box-bank-icon">
+                                                <a href="javascript:;" onclick="topup.TopupBank_ByLinkCard();" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankCode}.png" alt=""></a>
+                                            </div>
+                                            {{/if}}
                                         {{/each}}
                                     </script>
                                 </div>
@@ -292,9 +292,9 @@ else
                                     </div>
                                     <script id="topup_bank_tmpl_OnlySTB" type="text/x-jquery-tmpl">
                                         {{each listBank}}
-                                        {{if BankCode == STB}}
+                                        {{if BankCode == "STB"}}
                                         <div class="box-bank-icon">
-                                            <a href="javascript:;" onclick="topup.TopupBankDetail(this);" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankCode}.png" alt=""></a>
+                                            <a href="javascript:;" onclick="topup.TopupBank_ByLinkCard();" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankCode}.png" alt=""></a>
                                         </div>
                                         {{/if}}
                                         {{/each}}
