--- a/Pay365/Pay365Wallet/Views/Account/Link_Card.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Link_Card.cshtml
@@ -7,7 +7,7 @@
 <main class="main">
     <section class="main-top">
         <div class="content">
-            <p class="page-title">Quản lý thẻ gắn kết</p>
+            <p class="page-title">@Resources.Common.lbl_linkCard_Title</p>
             <div class="pay-breadcrumbs">
                 <a href="/thong-tin" class="breadcrumb waves-effect waves-light">@Resources.Account_info.btn_home</a>
             </div>
@@ -23,7 +23,7 @@
                         <div class="col-md-8">
                             <div class="card">
                                 <div class="card-title">
-                                    Thẻ gắn kết
+                                    >@Resources.Common.lbl_linkCard
                                 </div>
                                 <div class="card-content">
                                     <ul class="linked-cards">
@@ -408,7 +408,7 @@
                         <div class="col-md-4">
                             <div class="card">
                                 <div class="card-title">
-                                    Xem thêm
+                                    @Resources.News.btn_more
                                 </div>
                                 <div class="card-content">
                                     <ul class="questions">
