--- a/Pay365/Pay365Wallet/Views/Cashout/Cashout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Cashout/Cashout.cshtml
@@ -98,7 +98,10 @@
             <input id="i_cashout_account" value="i_cashout_account" name="g_cashout_type" class="with-gap" type="radio">
             <label for="i_cashout_account">@Resources.Cashout.String6</label>
         </span>
-
+        <span class="input-radio">
+            <input id="i_cashout_linkedbank" value="i_cashout_linkedbank" name="g_cashout_type" class="with-gap" type="radio">
+            <label for="i_cashout_linkedbank">@Resources.Cashout.String36</label>
+        </span>
     </div>
 
     <div id="ts-child" class="tab-slides">
@@ -456,7 +459,10 @@ else
             <input id="i_cashout_account" value="i_cashout_account" name="g_cashout_type" class="with-gap" type="radio">
             <label for="i_cashout_account">@Resources.Cashout.String6</label>
         </span>
-
+        <span class="input-radio">
+            <input id="i_cashout_linkedbank" value="i_cashout_linkedbank" name="g_cashout_type" class="with-gap" type="radio">
+            <label for="i_cashout_linkedbank">@Resources.Cashout.String36</label>
+        </span>
     </div>
 
     <div id="ts-child" class="tab-slides">
@@ -764,7 +770,10 @@ else
         });
 
         $(document).on('change', 'input[type=radio][name=g_cashout_type]', function () {
-            if (this.value === 'i_cashout_account')
+            if (this.value === 'i_cashout_linkedbank') {
+                topup.TopupBank_ByLinkCard('cashout');
+            }
+            else if (this.value === 'i_cashout_account')
                 $('#cashout_online_content').find('#bank_account').siblings('label').text('@Html.Raw(Resources.Cashout.String33)');
             else
                 $('#cashout_online_content').find('#bank_account').siblings('label').text('@Html.Raw(Resources.Cashout.String17)');
